--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,16 +15,18 @@ header {
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+
+header h1 span {
+
     color: #d9dcd6;
 }
 
-.header div {
+header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +34,11 @@ header {
     font-size: 20px;
 }
 
-.header div ul {
+header div ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,6 +52,7 @@ p {
     font-size: 16px;
 }
 
+/* Changed Div to figure */
 figure {
     height: 800px;
     width: 100%;
@@ -69,7 +72,7 @@ figure {
     margin-left: 25px;
 }
 
-section {
+section article {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -86,32 +89,12 @@ section {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+aside article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
+aside article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
