--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/*Combined HTML tags on Css to shorten code */
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -36,11 +36,11 @@ header nav {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/*Combined HTML tags on Css to shorten code */
 header nav ul {
     list-style-type: none;
 }
-
+/*Combined HTML tags on Css to shorten code */
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
@@ -93,11 +93,13 @@ section {
 }
 
 /* Removed Class's and used proper semantics */
-/* Also combined HTML tags on Css to shorten code */
+
 aside article {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
+/*Combined HTML tags on Css to shorten code */
 
 aside article h3 {
     margin-bottom: 10px;
@@ -118,7 +120,7 @@ section article  {
     color: #ffffff;
     
 }
-
+/*Combined HTML tags on Css to shorten code */
 section article img {max-height: 200px;}
 
 
